tests/ui/type-alias-impl-trait/defining-scopes-in_type.stderr
error[E0308]: mismatched types
  --> $DIR/defining-scopes-in_type.rs:10:22
   |
LL | type Foo = impl Send;
   |            --------- the expected opaque type
...
LL |         let _: Foo = ();
   |                ---   ^^ expected opaque type, found `()`
   |                |
   |                expected due to this
   |
   = note: expected opaque type `Foo`
                found unit type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
